--- a/chat.html
+++ b/chat.html
@@ -4,34 +4,120 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat SocketIO</title>
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f7f7f7;
+        }
+
+        .chat-container {
+            width: 400px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            display: flex;
+            height: 500px; 
+            flex-direction: column;
+        }
+
+        .chat-header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 15px;
+            text-align: center;
+        }
+
+        .chat-messages {
+    padding: 15px;
+    flex-grow: 1;
+    overflow-y: auto;
+    border-bottom: 1px solid #ddd;
+    max-height: 380px; 
+}
+        .chat-messages ul {
+            list-style-type: none;
+        }
+
+        .chat-messages li {
+            background-color: #f1f1f1;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+        }
+
+        .chat-input {
+            display: flex;
+            padding: 10px;
+            background-color: #fafafa;
+            border-top: 1px solid #ddd;
+        }
+
+        .chat-input input {
+            flex-grow: 1;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            margin-right: 10px;
+        }
+
+        .chat-input button {
+            padding: 10px 15px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .chat-input button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-    <input type="text">
-<button onclick="enviar()">Enviar</button>
-<ul></ul>
+    <div class="chat-container">
+        <div class="chat-header">
+            <h1>Chat</h1>
+        </div>
+        <div class="chat-messages">
+            <ul></ul>
+        </div>
+        <div class="chat-input">
+            <input type="text" placeholder="Digite sua mensagem...">
+            <button onclick="enviar()">Enviar</button>
+        </div>
+    </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"></script>
+    <script>
+        const socket = io("https://humble-bassoon-wwr7xg6r96vcg5w4-3000.app.github.dev/");
 
-<script>
+        socket.on("connect", () => {
+            console.log("Conectado ao servidor");
+        });
 
-    const socket = io("https://humble-bassoon-wwr7xg6r96vcg5w4-3000.app.github.dev/")
+        socket.on("message", async (msg) => {
+            console.log(msg);
+            const ul = document.querySelector("ul");
+            ul.innerHTML += `<li>${msg}</li>`;
+        });
 
-    socket.on("connect", ()=>{
-        console.log("conectado ao servidor")
-    })
-
-    socket.on("message", async (msg)=>{
-        console.log(msg)
-        const ul = document.querySelector("ul");
-        ul.innerHTML += `<li>${msg}</li>`
-    })
-
-    function enviar(){
-        let msg = document.querySelector("input")
-        socket.emit("message", msg.value)
-        msg.value = ""
-    }
-
-</script>
+        function enviar() {
+            let msg = document.querySelector("input");
+            socket.emit("message", msg.value);
+            msg.value = "";
+        }
+    </script>
 </body>
 </html>
