Atualizar o chat-wbs.html

--- a/wbs/chat-wbs.html
+++ b/wbs/chat-wbs.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat IA</title>
-    
+    <title>WebSocket Chat</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <h1>WebSocket Chat</h1>
+    
+    <div id="chat"></div>
+
+    <input type="text" id="message" placeholder="Digite sua mensagem" autofocus>
+    <button id="sendBtn">Enviar</button>
+
+    <script src="script.js"></script>
+
+</body>
     <input type="text"/>
     <button onclick="enviar()">Enviar</button>
     <ul></ul>
