--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
     <script>
         const socket = io();
 
-        // Mapeamento de comandos para arquivos de áudio
+        const username = localStorage.getItem('username') || 'Usuário';
+
         const audioMap = {
             "/image gato": "audios/Gato.m4a",
             "/image cachorro": "audios/Cachorro.m4a",
@@ -32,7 +33,6 @@
             "/image cabra gritando": "audios/Goat Scream.m4a"
         };
 
-        // Função para tocar o áudio específico com base no comando
         function playAudio(command) {
             const audioFile = audioMap[command];
             if (audioFile) {
@@ -43,51 +43,51 @@
             }
         }
 
-        // Função para exibir mensagens no chat
-        function displayMessage(message, messageType) {
+        function displayMessage(sender, message, messageType) {
             const chatMessages = document.getElementById('chat-messages');
             const msgElement = document.createElement('li');
-            msgElement.innerHTML = message;
-            msgElement.classList.add(messageType); // Define como 'sent' ou 'received'
+
+            const usernameElement = document.createElement('span');
+            usernameElement.classList.add('username');
+            usernameElement.textContent = sender;
+            msgElement.appendChild(usernameElement);
+
+            msgElement.innerHTML += `<p>${message}</p>`;
+            msgElement.classList.add(messageType);
             chatMessages.appendChild(msgElement);
-            chatMessages.scrollTop = chatMessages.scrollHeight; // Rolagem automática
+            chatMessages.scrollTop = chatMessages.scrollHeight;
         }
 
-        // Função para enviar a mensagem ao servidor
+
         function sendMessage() {
             const messageInput = document.getElementById('messageInput');
             const message = messageInput.value.trim();
             if (message) {
-                displayMessage(message, 'sent'); // Exibe como mensagem enviada
-                socket.emit('chatMessage', message); // Envia ao servidor
-                messageInput.value = ''; // Limpa o campo de entrada
+                displayMessage(username, message, 'sent');
+                socket.emit('chatMessage', message); 
+                messageInput.value = '';
             }
         }
 
-        // Adiciona um listener para a tecla Enter
         document.getElementById('messageInput').addEventListener('keydown', function(event) {
             if (event.key === 'Enter') {
-                event.preventDefault(); // Evita a nova linha
-                sendMessage(); // Chama a função de enviar mensagem
+                event.preventDefault();
+                sendMessage();
             }
         });
 
-        // Receber mensagens do servidor e exibir
         socket.on('chatMessage', (msg) => {
-            displayMessage(msg, 'received');
+            displayMessage("Bot", msg, 'received');
         });
 
-        // Receber a URL da imagem e o comando do servidor
         socket.on('imageResponse', (data) => {
             if (data.imageUrl) {
-                // Exibe a imagem gerada
-                displayMessage('<img src="' + data.imageUrl + '" alt="Imagem gerada" />', 'received');
+                displayMessage("Bot", `<img src="${data.imageUrl}" alt="Imagem gerada" />`, 'received');
             } else {
-                displayMessage(data.message, 'received'); // Exibe mensagem de erro
+                displayMessage("Bot", data.message, 'received');
             }
 
-            // Verifica o comando e toca o áudio correspondente
-            playAudio(data.command); // Passa o comando para a função playAudio
+            playAudio(data.command);
         });
     </script>
 </body>
