--- a/login.html
+++ b/login.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Chat</title>
+    <title>Login</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="login-container">
-        <h2>Login</h2>
+        <h2>Bem-vindo ao Chat!</h2>
         <form id="loginForm">
-            <label for="username">Nome de usuário:</label>
+            <label for="username">Nome de Usuário:</label>
             <input type="text" id="username" name="username" required>
             <button type="submit">Entrar</button>
         </form>
     </div>
-
-    <script src="login.js"></script>
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            const username = document.getElementById('username').value;
+            localStorage.setItem('username', username);
+            window.location.href = '/index.html';
+        });
+    </script>
 </body>
 </html>
