--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat com Geração de Imagens</title>
+    <title>Chat Roma AI</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <ul id="chat-messages"></ul>
     </div>
     <div id="message-container">
-        <input id="messageInput" type="text" placeholder="Digite uma mensagem ou /image para gerar uma imagem..." />
+        <input id="messageInput" type="text" placeholder="Digite /help para ver os comandos disponíveis" />
         <button onclick="sendMessage()">Enviar</button>
     </div>
 
